tests/generics/hll_generics_invalid.err.expected
error: at 29:26: [HTC-UndeclaredType] In function 'undeclared_type_param': undeclared type 'T'
    |
 29 | fn undeclared_type_param(x: T) -> i64 {
    |                          ^^^^
error: at 35:27: [HTC-UndeclaredType] In function 'undeclared_custom_type': undeclared type 'Nope'
    |
 35 | fn undeclared_custom_type(x: Nope) -> i64 {
    |                           ^^^^^^^
error: at 41:24: [HTC-TypeArgArityMismatch] In function 'arity_too_many_args': 'Box' takes 1 type argument(s), found 2
    |
 41 | fn arity_too_many_args(x: Box<i64, i64>) -> i64 {
    |                        ^^^^^^^^^^^^^^^^
error: at 47:23: [HTC-TypeArgArityMismatch] In function 'arity_too_few_args': 'Box' takes 1 type argument(s), found 0
    |
 47 | fn arity_too_few_args(x: Box) -> i64 {
    |                       ^^^^^^
error: at 53:29: [HTC-BoundNotSatisfied] In function 'bound_not_satisfied_copy': type argument 'Linear' for 'Box::T' does not satisfy bound 'Copy'
    |
 53 | fn bound_not_satisfied_copy(x: Box<Linear>) -> i64 {
    |                             ^^^^^^^^^^^^^^
error: at 53:29: [HTC-BoundNotSatisfied] In function 'bound_not_satisfied_copy': type argument 'Linear' for 'Box::T' does not satisfy bound 'Drop'
    |
 53 | fn bound_not_satisfied_copy(x: Box<Linear>) -> i64 {
    |                             ^^^^^^^^^^^^^^
error: at 59:29: [HTC-BoundNotSatisfied] In function 'bound_not_satisfied_drop': type argument 'Linear' for 'Sink::T' does not satisfy bound 'Drop'
    |
 59 | fn bound_not_satisfied_drop(x: Sink<Linear>) -> i64 {
    |                             ^^^^^^^^^^^^^^^
error: at 65:27: [HTC-BoundNotSatisfied] In function 'nested_bound_violation': type argument 'Linear' for 'Box::T' does not satisfy bound 'Copy'
    |
 65 | fn nested_bound_violation(x: Box<Box<Linear>>) -> i64 {
    |                           ^^^^^^^^^^^^^^^^^^^
error: at 65:27: [HTC-BoundNotSatisfied] In function 'nested_bound_violation': type argument 'Linear' for 'Box::T' does not satisfy bound 'Drop'
    |
 65 | fn nested_bound_violation(x: Box<Box<Linear>>) -> i64 {
    |                           ^^^^^^^^^^^^^^^^^^^
error: at 71:1: [HTC-TypeArgArityMismatch] In function 'return_type_bad_arity': 'Box' takes 1 type argument(s), found 2
    |
 71 | fn return_type_bad_arity() -> Box<i64, i64> {
    | ^
error: at 72:3: [HTC-TypeMismatch] In function 'return_type_bad_arity': type mismatch: expected Box<?0>, found Box<i64, i64>
    |
 72 |   Box { inner: 0 }
    |   ^^^^^^^^^^^^^^^^
error: at 78:26: [HTC-TypeMismatch] In function 'let_annotation_bad_arity': type mismatch: expected Box<?2>, found Box<i64, i64>
    |
 78 |   let x: Box<i64, i64> = Box { inner: 0 };
    |                          ^^^^^^^^^^^^^^^^
